src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROG
Rule 1     PROG -> CMDLIST
Rule 2     CMDLIST -> CMD
Rule 3     CMDLIST -> CMD CMDLIST
Rule 4     CMD -> CONF
Rule 5     CMD -> QRS
Rule 6     CMD -> NEW
Rule 7     CMD -> PROCS
Rule 8     CMD -> CMTS
Rule 9     CONF -> tk_import tk_table tk_id tk_from tk_file ;
Rule 10    CONF -> tk_export tk_table tk_id tk_as tk_file ;
Rule 11    CONF -> tk_discard tk_table tk_id ;
Rule 12    CONF -> tk_rename tk_table tk_id tk_id ;
Rule 13    CONF -> tk_print tk_table tk_id ;
Rule 14    QRS -> tk_select SELEC tk_from tk_id ;
Rule 15    QRS -> tk_select SELEC tk_from tk_id tk_where CONDLIST ;
Rule 16    QRS -> tk_select SELEC tk_from tk_id tk_limit tk_num ;
Rule 17    QRS -> tk_select SELEC tk_from tk_id tk_where CONDLIST tk_limit tk_num ;
Rule 18    SELEC -> *
Rule 19    SELEC -> COLLIST
Rule 20    COLLIST -> tk_id
Rule 21    COLLIST -> tk_id , COLLIST
Rule 22    CONDLIST -> COND tk_and CONDLIST
Rule 23    CONDLIST -> COND
Rule 24    COND -> tk_id OPERADOR VALOR
Rule 25    OPERADOR -> tk_operator
Rule 26    VALOR -> tk_num
Rule 27    VALOR -> tk_string
Rule 28    VALOR -> tk_num_dec
Rule 29    NEW -> tk_create tk_table tk_id QRS
Rule 30    NEW -> tk_create tk_table tk_id tk_from tk_id tk_join tk_id tk_using ( tk_id ) ;
Rule 31    PROCS -> tk_procedure tk_id tk_do CMDLIST tk_end
Rule 32    PROCS -> tk_call tk_id ;
Rule 33    CMTS -> tk_cmts_line
Rule 34    CMTS -> tk_cmts_block

Terminals, with rules where they appear

(                    : 30
)                    : 30
*                    : 18
,                    : 21
;                    : 9 10 11 12 13 14 15 16 17 30 32
error                : 
tk_and               : 22
tk_as                : 10
tk_call              : 32
tk_cmts_block        : 34
tk_cmts_line         : 33
tk_create            : 29 30
tk_discard           : 11
tk_do                : 31
tk_end               : 31
tk_export            : 10
tk_file              : 9 10
tk_from              : 9 14 15 16 17 30
tk_id                : 9 10 11 12 12 13 14 15 16 17 20 21 24 29 30 30 30 30 31 32
tk_import            : 9
tk_join              : 30
tk_limit             : 16 17
tk_num               : 16 17 26
tk_num_dec           : 28
tk_operator          : 25
tk_print             : 13
tk_procedure         : 31
tk_rename            : 12
tk_select            : 14 15 16 17
tk_string            : 27
tk_table             : 9 10 11 12 13 29 30
tk_using             : 30
tk_where             : 15 17

Nonterminals, with rules where they appear

CMD                  : 2 3
CMDLIST              : 1 3 31
CMTS                 : 8
COLLIST              : 19 21
COND                 : 22 23
CONDLIST             : 15 17 22
CONF                 : 4
NEW                  : 6
OPERADOR             : 24
PROCS                : 7
PROG                 : 0
QRS                  : 5 29
SELEC                : 14 15 16 17
VALOR                : 24

Parsing method: LALR

state 0

    (0) S' -> . PROG
    (1) PROG -> . CMDLIST
    (2) CMDLIST -> . CMD
    (3) CMDLIST -> . CMD CMDLIST
    (4) CMD -> . CONF
    (5) CMD -> . QRS
    (6) CMD -> . NEW
    (7) CMD -> . PROCS
    (8) CMD -> . CMTS
    (9) CONF -> . tk_import tk_table tk_id tk_from tk_file ;
    (10) CONF -> . tk_export tk_table tk_id tk_as tk_file ;
    (11) CONF -> . tk_discard tk_table tk_id ;
    (12) CONF -> . tk_rename tk_table tk_id tk_id ;
    (13) CONF -> . tk_print tk_table tk_id ;
    (14) QRS -> . tk_select SELEC tk_from tk_id ;
    (15) QRS -> . tk_select SELEC tk_from tk_id tk_where CONDLIST ;
    (16) QRS -> . tk_select SELEC tk_from tk_id tk_limit tk_num ;
    (17) QRS -> . tk_select SELEC tk_from tk_id tk_where CONDLIST tk_limit tk_num ;
    (29) NEW -> . tk_create tk_table tk_id QRS
    (30) NEW -> . tk_create tk_table tk_id tk_from tk_id tk_join tk_id tk_using ( tk_id ) ;
    (31) PROCS -> . tk_procedure tk_id tk_do CMDLIST tk_end
    (32) PROCS -> . tk_call tk_id ;
    (33) CMTS -> . tk_cmts_line
    (34) CMTS -> . tk_cmts_block

    tk_import       shift and go to state 9
    tk_export       shift and go to state 10
    tk_discard      shift and go to state 11
    tk_rename       shift and go to state 12
    tk_print        shift and go to state 13
    tk_select       shift and go to state 14
    tk_create       shift and go to state 15
    tk_procedure    shift and go to state 16
    tk_call         shift and go to state 17
    tk_cmts_line    shift and go to state 18
    tk_cmts_block   shift and go to state 19

    PROG                           shift and go to state 1
    CMDLIST                        shift and go to state 2
    CMD                            shift and go to state 3
    CONF                           shift and go to state 4
    QRS                            shift and go to state 5
    NEW                            shift and go to state 6
    PROCS                          shift and go to state 7
    CMTS                           shift and go to state 8

state 1

    (0) S' -> PROG .



state 2

    (1) PROG -> CMDLIST .

    $end            reduce using rule 1 (PROG -> CMDLIST .)


state 3

    (2) CMDLIST -> CMD .
    (3) CMDLIST -> CMD . CMDLIST
    (2) CMDLIST -> . CMD
    (3) CMDLIST -> . CMD CMDLIST
    (4) CMD -> . CONF
    (5) CMD -> . QRS
    (6) CMD -> . NEW
    (7) CMD -> . PROCS
    (8) CMD -> . CMTS
    (9) CONF -> . tk_import tk_table tk_id tk_from tk_file ;
    (10) CONF -> . tk_export tk_table tk_id tk_as tk_file ;
    (11) CONF -> . tk_discard tk_table tk_id ;
    (12) CONF -> . tk_rename tk_table tk_id tk_id ;
    (13) CONF -> . tk_print tk_table tk_id ;
    (14) QRS -> . tk_select SELEC tk_from tk_id ;
    (15) QRS -> . tk_select SELEC tk_from tk_id tk_where CONDLIST ;
    (16) QRS -> . tk_select SELEC tk_from tk_id tk_limit tk_num ;
    (17) QRS -> . tk_select SELEC tk_from tk_id tk_where CONDLIST tk_limit tk_num ;
    (29) NEW -> . tk_create tk_table tk_id QRS
    (30) NEW -> . tk_create tk_table tk_id tk_from tk_id tk_join tk_id tk_using ( tk_id ) ;
    (31) PROCS -> . tk_procedure tk_id tk_do CMDLIST tk_end
    (32) PROCS -> . tk_call tk_id ;
    (33) CMTS -> . tk_cmts_line
    (34) CMTS -> . tk_cmts_block

    $end            reduce using rule 2 (CMDLIST -> CMD .)
    tk_end          reduce using rule 2 (CMDLIST -> CMD .)
    tk_import       shift and go to state 9
    tk_export       shift and go to state 10
    tk_discard      shift and go to state 11
    tk_rename       shift and go to state 12
    tk_print        shift and go to state 13
    tk_select       shift and go to state 14
    tk_create       shift and go to state 15
    tk_procedure    shift and go to state 16
    tk_call         shift and go to state 17
    tk_cmts_line    shift and go to state 18
    tk_cmts_block   shift and go to state 19

    CMD                            shift and go to state 3
    CMDLIST                        shift and go to state 20
    CONF                           shift and go to state 4
    QRS                            shift and go to state 5
    NEW                            shift and go to state 6
    PROCS                          shift and go to state 7
    CMTS                           shift and go to state 8

state 4

    (4) CMD -> CONF .

    tk_import       reduce using rule 4 (CMD -> CONF .)
    tk_export       reduce using rule 4 (CMD -> CONF .)
    tk_discard      reduce using rule 4 (CMD -> CONF .)
    tk_rename       reduce using rule 4 (CMD -> CONF .)
    tk_print        reduce using rule 4 (CMD -> CONF .)
    tk_select       reduce using rule 4 (CMD -> CONF .)
    tk_create       reduce using rule 4 (CMD -> CONF .)
    tk_procedure    reduce using rule 4 (CMD -> CONF .)
    tk_call         reduce using rule 4 (CMD -> CONF .)
    tk_cmts_line    reduce using rule 4 (CMD -> CONF .)
    tk_cmts_block   reduce using rule 4 (CMD -> CONF .)
    $end            reduce using rule 4 (CMD -> CONF .)
    tk_end          reduce using rule 4 (CMD -> CONF .)


state 5

    (5) CMD -> QRS .

    tk_import       reduce using rule 5 (CMD -> QRS .)
    tk_export       reduce using rule 5 (CMD -> QRS .)
    tk_discard      reduce using rule 5 (CMD -> QRS .)
    tk_rename       reduce using rule 5 (CMD -> QRS .)
    tk_print        reduce using rule 5 (CMD -> QRS .)
    tk_select       reduce using rule 5 (CMD -> QRS .)
    tk_create       reduce using rule 5 (CMD -> QRS .)
    tk_procedure    reduce using rule 5 (CMD -> QRS .)
    tk_call         reduce using rule 5 (CMD -> QRS .)
    tk_cmts_line    reduce using rule 5 (CMD -> QRS .)
    tk_cmts_block   reduce using rule 5 (CMD -> QRS .)
    $end            reduce using rule 5 (CMD -> QRS .)
    tk_end          reduce using rule 5 (CMD -> QRS .)


state 6

    (6) CMD -> NEW .

    tk_import       reduce using rule 6 (CMD -> NEW .)
    tk_export       reduce using rule 6 (CMD -> NEW .)
    tk_discard      reduce using rule 6 (CMD -> NEW .)
    tk_rename       reduce using rule 6 (CMD -> NEW .)
    tk_print        reduce using rule 6 (CMD -> NEW .)
    tk_select       reduce using rule 6 (CMD -> NEW .)
    tk_create       reduce using rule 6 (CMD -> NEW .)
    tk_procedure    reduce using rule 6 (CMD -> NEW .)
    tk_call         reduce using rule 6 (CMD -> NEW .)
    tk_cmts_line    reduce using rule 6 (CMD -> NEW .)
    tk_cmts_block   reduce using rule 6 (CMD -> NEW .)
    $end            reduce using rule 6 (CMD -> NEW .)
    tk_end          reduce using rule 6 (CMD -> NEW .)


state 7

    (7) CMD -> PROCS .

    tk_import       reduce using rule 7 (CMD -> PROCS .)
    tk_export       reduce using rule 7 (CMD -> PROCS .)
    tk_discard      reduce using rule 7 (CMD -> PROCS .)
    tk_rename       reduce using rule 7 (CMD -> PROCS .)
    tk_print        reduce using rule 7 (CMD -> PROCS .)
    tk_select       reduce using rule 7 (CMD -> PROCS .)
    tk_create       reduce using rule 7 (CMD -> PROCS .)
    tk_procedure    reduce using rule 7 (CMD -> PROCS .)
    tk_call         reduce using rule 7 (CMD -> PROCS .)
    tk_cmts_line    reduce using rule 7 (CMD -> PROCS .)
    tk_cmts_block   reduce using rule 7 (CMD -> PROCS .)
    $end            reduce using rule 7 (CMD -> PROCS .)
    tk_end          reduce using rule 7 (CMD -> PROCS .)


state 8

    (8) CMD -> CMTS .

    tk_import       reduce using rule 8 (CMD -> CMTS .)
    tk_export       reduce using rule 8 (CMD -> CMTS .)
    tk_discard      reduce using rule 8 (CMD -> CMTS .)
    tk_rename       reduce using rule 8 (CMD -> CMTS .)
    tk_print        reduce using rule 8 (CMD -> CMTS .)
    tk_select       reduce using rule 8 (CMD -> CMTS .)
    tk_create       reduce using rule 8 (CMD -> CMTS .)
    tk_procedure    reduce using rule 8 (CMD -> CMTS .)
    tk_call         reduce using rule 8 (CMD -> CMTS .)
    tk_cmts_line    reduce using rule 8 (CMD -> CMTS .)
    tk_cmts_block   reduce using rule 8 (CMD -> CMTS .)
    $end            reduce using rule 8 (CMD -> CMTS .)
    tk_end          reduce using rule 8 (CMD -> CMTS .)


state 9

    (9) CONF -> tk_import . tk_table tk_id tk_from tk_file ;

    tk_table        shift and go to state 21


state 10

    (10) CONF -> tk_export . tk_table tk_id tk_as tk_file ;

    tk_table        shift and go to state 22


state 11

    (11) CONF -> tk_discard . tk_table tk_id ;

    tk_table        shift and go to state 23


state 12

    (12) CONF -> tk_rename . tk_table tk_id tk_id ;

    tk_table        shift and go to state 24


state 13

    (13) CONF -> tk_print . tk_table tk_id ;

    tk_table        shift and go to state 25


state 14

    (14) QRS -> tk_select . SELEC tk_from tk_id ;
    (15) QRS -> tk_select . SELEC tk_from tk_id tk_where CONDLIST ;
    (16) QRS -> tk_select . SELEC tk_from tk_id tk_limit tk_num ;
    (17) QRS -> tk_select . SELEC tk_from tk_id tk_where CONDLIST tk_limit tk_num ;
    (18) SELEC -> . *
    (19) SELEC -> . COLLIST
    (20) COLLIST -> . tk_id
    (21) COLLIST -> . tk_id , COLLIST

    *               shift and go to state 28
    tk_id           shift and go to state 27

    SELEC                          shift and go to state 26
    COLLIST                        shift and go to state 29

state 15

    (29) NEW -> tk_create . tk_table tk_id QRS
    (30) NEW -> tk_create . tk_table tk_id tk_from tk_id tk_join tk_id tk_using ( tk_id ) ;

    tk_table        shift and go to state 30


state 16

    (31) PROCS -> tk_procedure . tk_id tk_do CMDLIST tk_end

    tk_id           shift and go to state 31


state 17

    (32) PROCS -> tk_call . tk_id ;

    tk_id           shift and go to state 32


state 18

    (33) CMTS -> tk_cmts_line .

    tk_import       reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_export       reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_discard      reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_rename       reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_print        reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_select       reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_create       reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_procedure    reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_call         reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_cmts_line    reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_cmts_block   reduce using rule 33 (CMTS -> tk_cmts_line .)
    $end            reduce using rule 33 (CMTS -> tk_cmts_line .)
    tk_end          reduce using rule 33 (CMTS -> tk_cmts_line .)


state 19

    (34) CMTS -> tk_cmts_block .

    tk_import       reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_export       reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_discard      reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_rename       reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_print        reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_select       reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_create       reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_procedure    reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_call         reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_cmts_line    reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_cmts_block   reduce using rule 34 (CMTS -> tk_cmts_block .)
    $end            reduce using rule 34 (CMTS -> tk_cmts_block .)
    tk_end          reduce using rule 34 (CMTS -> tk_cmts_block .)


state 20

    (3) CMDLIST -> CMD CMDLIST .

    $end            reduce using rule 3 (CMDLIST -> CMD CMDLIST .)
    tk_end          reduce using rule 3 (CMDLIST -> CMD CMDLIST .)


state 21

    (9) CONF -> tk_import tk_table . tk_id tk_from tk_file ;

    tk_id           shift and go to state 33


state 22

    (10) CONF -> tk_export tk_table . tk_id tk_as tk_file ;

    tk_id           shift and go to state 34


state 23

    (11) CONF -> tk_discard tk_table . tk_id ;

    tk_id           shift and go to state 35


state 24

    (12) CONF -> tk_rename tk_table . tk_id tk_id ;

    tk_id           shift and go to state 36


state 25

    (13) CONF -> tk_print tk_table . tk_id ;

    tk_id           shift and go to state 37


state 26

    (14) QRS -> tk_select SELEC . tk_from tk_id ;
    (15) QRS -> tk_select SELEC . tk_from tk_id tk_where CONDLIST ;
    (16) QRS -> tk_select SELEC . tk_from tk_id tk_limit tk_num ;
    (17) QRS -> tk_select SELEC . tk_from tk_id tk_where CONDLIST tk_limit tk_num ;

    tk_from         shift and go to state 38


state 27

    (20) COLLIST -> tk_id .
    (21) COLLIST -> tk_id . , COLLIST

    tk_from         reduce using rule 20 (COLLIST -> tk_id .)
    ,               shift and go to state 39


state 28

    (18) SELEC -> * .

    tk_from         reduce using rule 18 (SELEC -> * .)


state 29

    (19) SELEC -> COLLIST .

    tk_from         reduce using rule 19 (SELEC -> COLLIST .)


state 30

    (29) NEW -> tk_create tk_table . tk_id QRS
    (30) NEW -> tk_create tk_table . tk_id tk_from tk_id tk_join tk_id tk_using ( tk_id ) ;

    tk_id           shift and go to state 40


state 31

    (31) PROCS -> tk_procedure tk_id . tk_do CMDLIST tk_end

    tk_do           shift and go to state 41


state 32

    (32) PROCS -> tk_call tk_id . ;

    ;               shift and go to state 42


state 33

    (9) CONF -> tk_import tk_table tk_id . tk_from tk_file ;

    tk_from         shift and go to state 43


state 34

    (10) CONF -> tk_export tk_table tk_id . tk_as tk_file ;

    tk_as           shift and go to state 44


state 35

    (11) CONF -> tk_discard tk_table tk_id . ;

    ;               shift and go to state 45


state 36

    (12) CONF -> tk_rename tk_table tk_id . tk_id ;

    tk_id           shift and go to state 46


state 37

    (13) CONF -> tk_print tk_table tk_id . ;

    ;               shift and go to state 47


state 38

    (14) QRS -> tk_select SELEC tk_from . tk_id ;
    (15) QRS -> tk_select SELEC tk_from . tk_id tk_where CONDLIST ;
    (16) QRS -> tk_select SELEC tk_from . tk_id tk_limit tk_num ;
    (17) QRS -> tk_select SELEC tk_from . tk_id tk_where CONDLIST tk_limit tk_num ;

    tk_id           shift and go to state 48


state 39

    (21) COLLIST -> tk_id , . COLLIST
    (20) COLLIST -> . tk_id
    (21) COLLIST -> . tk_id , COLLIST

    tk_id           shift and go to state 27

    COLLIST                        shift and go to state 49

state 40

    (29) NEW -> tk_create tk_table tk_id . QRS
    (30) NEW -> tk_create tk_table tk_id . tk_from tk_id tk_join tk_id tk_using ( tk_id ) ;
    (14) QRS -> . tk_select SELEC tk_from tk_id ;
    (15) QRS -> . tk_select SELEC tk_from tk_id tk_where CONDLIST ;
    (16) QRS -> . tk_select SELEC tk_from tk_id tk_limit tk_num ;
    (17) QRS -> . tk_select SELEC tk_from tk_id tk_where CONDLIST tk_limit tk_num ;

    tk_from         shift and go to state 51
    tk_select       shift and go to state 14

    QRS                            shift and go to state 50

state 41

    (31) PROCS -> tk_procedure tk_id tk_do . CMDLIST tk_end
    (2) CMDLIST -> . CMD
    (3) CMDLIST -> . CMD CMDLIST
    (4) CMD -> . CONF
    (5) CMD -> . QRS
    (6) CMD -> . NEW
    (7) CMD -> . PROCS
    (8) CMD -> . CMTS
    (9) CONF -> . tk_import tk_table tk_id tk_from tk_file ;
    (10) CONF -> . tk_export tk_table tk_id tk_as tk_file ;
    (11) CONF -> . tk_discard tk_table tk_id ;
    (12) CONF -> . tk_rename tk_table tk_id tk_id ;
    (13) CONF -> . tk_print tk_table tk_id ;
    (14) QRS -> . tk_select SELEC tk_from tk_id ;
    (15) QRS -> . tk_select SELEC tk_from tk_id tk_where CONDLIST ;
    (16) QRS -> . tk_select SELEC tk_from tk_id tk_limit tk_num ;
    (17) QRS -> . tk_select SELEC tk_from tk_id tk_where CONDLIST tk_limit tk_num ;
    (29) NEW -> . tk_create tk_table tk_id QRS
    (30) NEW -> . tk_create tk_table tk_id tk_from tk_id tk_join tk_id tk_using ( tk_id ) ;
    (31) PROCS -> . tk_procedure tk_id tk_do CMDLIST tk_end
    (32) PROCS -> . tk_call tk_id ;
    (33) CMTS -> . tk_cmts_line
    (34) CMTS -> . tk_cmts_block

    tk_import       shift and go to state 9
    tk_export       shift and go to state 10
    tk_discard      shift and go to state 11
    tk_rename       shift and go to state 12
    tk_print        shift and go to state 13
    tk_select       shift and go to state 14
    tk_create       shift and go to state 15
    tk_procedure    shift and go to state 16
    tk_call         shift and go to state 17
    tk_cmts_line    shift and go to state 18
    tk_cmts_block   shift and go to state 19

    CMDLIST                        shift and go to state 52
    CMD                            shift and go to state 3
    CONF                           shift and go to state 4
    QRS                            shift and go to state 5
    NEW                            shift and go to state 6
    PROCS                          shift and go to state 7
    CMTS                           shift and go to state 8

state 42

    (32) PROCS -> tk_call tk_id ; .

    tk_import       reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_export       reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_discard      reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_rename       reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_print        reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_select       reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_create       reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_procedure    reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_call         reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_cmts_line    reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_cmts_block   reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    $end            reduce using rule 32 (PROCS -> tk_call tk_id ; .)
    tk_end          reduce using rule 32 (PROCS -> tk_call tk_id ; .)


state 43

    (9) CONF -> tk_import tk_table tk_id tk_from . tk_file ;

    tk_file         shift and go to state 53


state 44

    (10) CONF -> tk_export tk_table tk_id tk_as . tk_file ;

    tk_file         shift and go to state 54


state 45

    (11) CONF -> tk_discard tk_table tk_id ; .

    tk_import       reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_export       reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_discard      reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_rename       reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_print        reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_select       reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_create       reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_procedure    reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_call         reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_cmts_line    reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_cmts_block   reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    $end            reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)
    tk_end          reduce using rule 11 (CONF -> tk_discard tk_table tk_id ; .)


state 46

    (12) CONF -> tk_rename tk_table tk_id tk_id . ;

    ;               shift and go to state 55


state 47

    (13) CONF -> tk_print tk_table tk_id ; .

    tk_import       reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_export       reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_discard      reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_rename       reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_print        reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_select       reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_create       reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_procedure    reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_call         reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_cmts_line    reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_cmts_block   reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    $end            reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)
    tk_end          reduce using rule 13 (CONF -> tk_print tk_table tk_id ; .)


state 48

    (14) QRS -> tk_select SELEC tk_from tk_id . ;
    (15) QRS -> tk_select SELEC tk_from tk_id . tk_where CONDLIST ;
    (16) QRS -> tk_select SELEC tk_from tk_id . tk_limit tk_num ;
    (17) QRS -> tk_select SELEC tk_from tk_id . tk_where CONDLIST tk_limit tk_num ;

    ;               shift and go to state 56
    tk_where        shift and go to state 57
    tk_limit        shift and go to state 58


state 49

    (21) COLLIST -> tk_id , COLLIST .

    tk_from         reduce using rule 21 (COLLIST -> tk_id , COLLIST .)


state 50

    (29) NEW -> tk_create tk_table tk_id QRS .

    tk_import       reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_export       reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_discard      reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_rename       reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_print        reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_select       reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_create       reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_procedure    reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_call         reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_cmts_line    reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_cmts_block   reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    $end            reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)
    tk_end          reduce using rule 29 (NEW -> tk_create tk_table tk_id QRS .)


state 51

    (30) NEW -> tk_create tk_table tk_id tk_from . tk_id tk_join tk_id tk_using ( tk_id ) ;

    tk_id           shift and go to state 59


state 52

    (31) PROCS -> tk_procedure tk_id tk_do CMDLIST . tk_end

    tk_end          shift and go to state 60


state 53

    (9) CONF -> tk_import tk_table tk_id tk_from tk_file . ;

    ;               shift and go to state 61


state 54

    (10) CONF -> tk_export tk_table tk_id tk_as tk_file . ;

    ;               shift and go to state 62


state 55

    (12) CONF -> tk_rename tk_table tk_id tk_id ; .

    tk_import       reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_export       reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_discard      reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_rename       reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_print        reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_select       reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_create       reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_procedure    reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_call         reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_cmts_line    reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_cmts_block   reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    $end            reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)
    tk_end          reduce using rule 12 (CONF -> tk_rename tk_table tk_id tk_id ; .)


state 56

    (14) QRS -> tk_select SELEC tk_from tk_id ; .

    tk_import       reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_export       reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_discard      reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_rename       reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_print        reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_select       reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_create       reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_procedure    reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_call         reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_cmts_line    reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_cmts_block   reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    $end            reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)
    tk_end          reduce using rule 14 (QRS -> tk_select SELEC tk_from tk_id ; .)


state 57

    (15) QRS -> tk_select SELEC tk_from tk_id tk_where . CONDLIST ;
    (17) QRS -> tk_select SELEC tk_from tk_id tk_where . CONDLIST tk_limit tk_num ;
    (22) CONDLIST -> . COND tk_and CONDLIST
    (23) CONDLIST -> . COND
    (24) COND -> . tk_id OPERADOR VALOR

    tk_id           shift and go to state 63

    CONDLIST                       shift and go to state 64
    COND                           shift and go to state 65

state 58

    (16) QRS -> tk_select SELEC tk_from tk_id tk_limit . tk_num ;

    tk_num          shift and go to state 66


state 59

    (30) NEW -> tk_create tk_table tk_id tk_from tk_id . tk_join tk_id tk_using ( tk_id ) ;

    tk_join         shift and go to state 67


state 60

    (31) PROCS -> tk_procedure tk_id tk_do CMDLIST tk_end .
